upgrade to version 1.0.1

--- a/.structureignore
+++ b/.structureignore
@@ -1,4 +1,4 @@
-# StructureMaster Ignore File
+# Stracture-Master Ignore File
 # This file defines patterns for files and directories to ignore during scanning
 
 # Version Control
